--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-  </head>
+    <link rel="icon" href="/frontend/src/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/frontend/src/img/favicon.ico" type="image/x-icon">
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
